app_client/dashboard/dashboard.view.css
#lockIcon {
  position: absolute;
  right: 40px;
  z-index: 0;
}

#lockIconRed {
  position: absolute;
  right: 40px;
  z-index: 1;
}

#widgetIcon {
  position: absolute;
  z-index: 0;
  width: 100%;
  height: 100%;
}

#x-delete {
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 100%;
}

.modal-header {
  background-color: #231f20;
  color: white;
  display: flex;
  flex-direction: row;
}

.modal-header-div {
  width: 25%;
  text-align: center;
}

.modal-body {
  background-color: #231f20;
}

#logout-button {
  width: 60%;
  text-align: center;
}

#widgetStringInput {
  height: 200px;
}

.modal-content {
  color: white;
}

.main-modal {
  background-color: #231f20;
  height:75vh;
  justify-content: center;
}

.main-modal-tab {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.modal-body-form {
  height: 174px;
  padding-top: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.nav-tabs>li>a {
  color: #2aabd2;
}

.nav-tabs>li.active>a,
.nav-tabs>li.active>a:focus,
.nav-tabs>li.active>a:hover {
  background-color: black;
  color: white;
}

.modal-form-icon-container {
}

.selected-icon-container {
  text-align: center;
}

.selected-icon {
  width: 40%;
  height: 40%;
}

.gridster-modal {
  max-height: 50vh;
  overflow: scroll;
}

.gridster-modal-icon {
  width: 100%;
  height: 100%;
}

